<resources>
    <string name="app_name">SmartPhone News app</string>
    <string name="empty_state">No news founds.</string>
    <string name="no_internet">No internet found.</string>
    <string name="author">Author</string>
    <string name="technology">Technology</string>
    <string name="date">Mar 6, 2010</string>
    <string name="title">Title</string>

    //Setting menu
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    //Choose date from
    <string name="settings_news_from_label">News from</string>
    <string name="settings_news_from_key" translatable="false">from-date</string>
    <string name="settings_news_from_default" translatable="false">0</string>

    //Choose date to
    <string name="settings_news_to_label">News to</string>
    <string name="settings_news_to_key" translatable="false">to-date</string>
    <string name="settings_news_to_default" translatable="false">0</string>

    // Choose order by
    <string-array name="settings_order_by_labels">
        <item>@string/settings_order_by_newest_news_label</item>
        <item>@string/settings_order_by_oldest_news_label</item>
        <item>@string/settings_order_by_relevance_news_label</item>
    </string-array>

    <string-array name="settings_order_by_values">
        <item>@string/settings_order_by_newest_news_value</item>
        <item>@string/settings_order_by_oldest_news_value</item>
        <item>@string/settings_order_by_relevance_news_value</item>
    </string-array>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_news_value</string>

    <string name="settings_order_by_newest_news_label">Newest</string>
    <string name="settings_order_by_newest_news_value" translatable="false">newest</string>

    <string name="settings_order_by_oldest_news_label">Oldest</string>
    <string name="settings_order_by_oldest_news_value" translatable="false">oldest</string>

    <string name="settings_order_by_relevance_news_label">Relevance</string>
    <string name="settings_order_by_relevance_news_value" translatable="false">relevance</string>

    //Choose section
    <string-array name="settings_choose_section_labels">
        <item>@string/settings_section_all_sections_news_label</item>
        <item>@string/settings_section_technology_news_label</item>
        <item>@string/settings_section_opinion_news_label</item>
        <item>@string/settings_section_money_news_label</item>
        <item>@string/settings_section_games_news_label</item>
        <item>@string/settings_section_lifestyle_news_label</item>
        <item>@string/settings_section_travel_news_label</item>
    </string-array>
    <string-array name="settings_choose_section_values">
        <item>@string/settings_section_all_sections_news_value</item>
        <item>@string/settings_section_technology_news_value</item>
        <item>@string/settings_section_opinion_news_value</item>
        <item>@string/settings_section_money_news_value</item>
        <item>@string/settings_section_games_news_value</item>
        <item>@string/settings_section_lifestyle_news_value</item>
        <item>@string/settings_section_travel_news_value</item>
    </string-array>
    <string name="settings_choose_section_label">Choose section</string>
    <string name="settings_choose_section_key" translatable="false">section</string>
    <string name="settings_choose_section_default" translatable="false">@string/settings_section_all_sections_news_value</string>
    //Sections name
    <string name="settings_section_all_sections_news_label">All sections</string>
    <string name="settings_section_all_sections_news_value" translatable="false">all_sections</string>
    <string name="settings_section_technology_news_label">Technology</string>
    <string name="settings_section_technology_news_value" translatable="false">technology</string>
    <string name="settings_section_opinion_news_label">Opinion</string>
    <string name="settings_section_opinion_news_value" translatable="false">commentisfree</string>
    <string name="settings_section_money_news_label">Money</string>
    <string name="settings_section_money_news_value" translatable="false">money</string>
    <string name="settings_section_games_news_label">Games</string>
    <string name="settings_section_games_news_value" translatable="false">games</string>
    <string name="settings_section_lifestyle_news_label">Lifestyle</string>
    <string name="settings_section_lifestyle_news_value" translatable="false">lifeandstyle</string>
    <string name="settings_section_travel_news_label">Travel</string>
    <string name="settings_section_travel_news_value" translatable="false">travel</string>
    <string name="setting_older_date">Wrong input - no data for today</string>
    <string name="setting_future_date">Wrong input - future date.</string>
    <string name="news">News</string>
    <string name="default_date">1970-01-01</string>
    <string name="from_before_to_warning">From date has to be before To date!</string>

</resources>
