<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_news_from_default"
        android:inputType="date"

        android:key="@string/settings_news_from_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_news_from_label" />

    <ListPreference
        android:defaultValue="@string/settings_choose_section_default"
        android:entries="@array/settings_choose_section_labels"
        android:entryValues="@array/settings_choose_section_values"
        android:key="@string/settings_choose_section_key"
        android:title="@string/settings_choose_section_label" />

</PreferenceScreen>